update to psr-4 autoloading

--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,12 @@
 {
   "require": {
     "mgargano/simplehtmldom": "1.*"
+  },
+
+  "autoload": {
+    "psr-4": {
+      "src\\": "src/",
+      "Vendor\\Namespace\\": ""
+    }
   }
 }
